# a2a2

./: .gitignore  Cargo.toml  a2a2.toml.example  mise.toml
.mise/tasks/: dev.toml  pi.toml
deploy/: a2a2.service  bluealsa-a2a2.service
src/: avrcp.rs  buttons.rs  cli.rs  config.rs  main.rs  run.rs
src/bluetooth/: alsa_capture.rs  error.rs  mod.rs  setup.rs
