[package]
name = "a2a2"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0"
repository = "https://github.com/surinrasu/a2a2"
description = "Bluetooth A2DP/AVRCP to AirPlay bridge for Raspberry Pi"

[[bin]]
name = "a2a2"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
liba2 = { git = "https://github.com/surinrasu/liba2.git" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.37", features = [
    "io-util",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
toml = "0.8"

[features]
default = []
bridge = [
    "dep:alsa",
    "dep:crossbeam-channel",
    "dep:libc",
    "dep:rppal",
    "dep:thiserror",
]

[target.'cfg(target_os = "linux")'.dependencies]
alsa = { version = "0.9", optional = true }
crossbeam-channel = { version = "0.5", optional = true }
libc = { version = "0.2", optional = true }
rppal = { version = "0.22", optional = true }
thiserror = { version = "1.0", optional = true }
